# KALMUA

./: .gitignore  CMakeLists.txt  LICENSE.txt  NOTICE.txt  README.md
src/: main.cpp
src/SharedMemoryInterface/: README  SharedMemoryInterface.hpp
src/ffb/: di8_device.cpp  di8_device.hpp
src/util/: win32_util.cpp  win32_util.hpp
